ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/AccessibilityAfterStatic/parserAccessibilityAfterStatic6/input.ts.stderr
error: Expected }, got <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/AccessibilityAfterStatic/parserAccessibilityAfterStatic6/input.ts:3:8
  |
3 | static public
  |        ^^^^^^

